force-app/main/default/objects/custom_create104__c/custom_create104__c.object-meta.xml
<CustomObject>
    <label>Custom created object104</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects104</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>