force-app/main/default/objects/custom_create104__c/fields/custom_create_104field535__c.field-meta.xml
<CustomField>
    <fullName>custom_create_104field535__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 104field535</label>
    <type>Checkbox</type>
</CustomField>